--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav>
 
         <ul>
-            <li><a href="/Main/index.html">Home</a></li>
+            <li><a href="https://balencedveil717.github.io/MyYT/">Home</a></li>
             <li><a href="#">My Videos</a>
                 <ul>
                     <li class="topic">Playlists</li>
@@ -32,7 +32,7 @@
                 </ul>
             </li>
             <li><a href="#">About Me</a></li>
-            <li><a href="/Contact/index.html">Contact</a></li>
+            <li><a href="https://balencedveil717.github.io/Contact/">Contact</a></li>
         </ul>
     </nav>
     <div class="hlo">
