--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
             Please Subscribe To My Channel.</p>
             </b>
     </div>
+    <div class="footer">
+        <footer>
+            <p>Copyright &copy; 2022, BalencedVeil717</p>
+        </footer>
 </body>
 
 </html>
